<resources>
    <string name="app_name">Facebook Calendar Sync</string>
    <string name="facebook_app_id">450856338387391</string>
    <string name="fb_login_protocol_scheme">fb450856338387391</string>

    <!--Login Fragment-->
    <string name="button_login_facebook">Log in with Facebook</string>
    <string name="login_again">Something went wrong, please try logging in again.</string>

    <!--Permissions Fragment-->
    <string name="missing_permissions_title">Missing permissions.</string>
    <string name="missing_permissions_description">This app can only be used when account and calendar permissions are given.</string>
    <string name="button_grant_permission">Grant permission</string>

    <string name="request_permissions_title">We need your permission</string>
    <string name="request_accounts_permission_description">In order to sync your Facebook events with your local
    calendar, we need permission to access your accounts and contacts. You can enable these permissions in your app
    settings.</string>
    <string name="request_calendar_permission_description">In order to sync your Facebook events with your local
    calendar, we need permission to access your calendar. You can enable these permissions in your app
    settings.</string>
    <string name="request_account_and_calendar_permission_description">In order to sync your Facebook events with your local
    calendar, we need permission to access your calendar and your accounts. You can enable these permissions in your app
    settings.</string>

    <!--Sync Fragment-->
    <string name="not_synced_yet">Not synced yet</string>
    <string name="button_sync_now">Sync now</string>
    <string name="no_network_title">No network</string>
    <string name="no_network_message">It seems that you don\'t have an active network connection. Please connect to the internet, so
    your Facebook events can be synced.</string>
    <string name="sync_paused_title">Sync paused</string>
    <string name="sync_paused_message">Syncing is currently paused. You can change this in the menu on the left.</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_header_settings">Settings</string>
    <string name="navigation_drawer_facebook_settings">Facebook settings</string>
    <string name="navigation_drawer_local_calendar_settings">Local calendar settings</string>
    <string name="navigation_drawer_sync_settings">Sync settings</string>
    <string name="navigation_drawer_stop_sync">Stop sync</string>
    <string name="navigation_drawer_start_sync">Start sync</string>
    <string name="navigation_drawer_log_out">Log out from Facebook</string>
    <string name="navigation_drawer_log_in">Log in with Facebook</string>
    <string name="navigation_drawer_report_a_bug">Report a bug</string>
    <string name="dialog_logout_title">Sure?</string>
    <string name="dialog_logout_description">Are you sure you want to log out from Facebook? If you\'re logged out,
        your Facebook events won\'t be synced with your local calendar anymore.</string>

    <!--Settings -->
    <string name="facebook_settings_title">Facebook settings</string>
    <string name="local_calendar_settings_title">Local calendar settings</string>
    <string name="sync_settings_title">Sync settings</string>
    <string name="dialog_settings_changed_title">Sync now?</string>
    <string name="dialog_settings_changed_description">You have changed your sync settings. Would you like
    to run a sync with these new settings right now?</string>

    <!-- Sync Settings -->
    <string name="sync_settings_wifi">Wifi</string>
    <string name="sync_settings_wifi_description">Sync your Facebook events only when your phone has an active wifi connection.</string>
    <string name="sync_settings_notifications">Notifications</string>
    <string name="sync_settings_notifications_description">Show notifications when syncing problems occur.</string>
    <string name="sync_settings_sync_interval">Sync interval</string>
    <string name="sync_settings_sync_interval_description">The interval with which your Facebook events are synced with your local calendar.</string>
    <string name="sync_settings_sync_interval_1hr">1 hour</string>
    <string name="sync_settings_sync_interval_6hrs">6 hours</string>
    <string name="sync_settings_sync_interval_12hrs">12 hours</string>
    <string name="sync_settings_sync_interval_24hrs">24 hours</string>

    <!-- Facebook Settings -->
    <string name="facebook_settings_show_link">Show Facebook link</string>
    <string name="facebook_settings_show_link_description">Show a link to the Facebook event in the event description.</string>
    <string name="facebook_settings_rsvp_range">"Attending" status</string>
    <string name="facebook_settings_rsvp_range_description">Choose which events are synced</string>
    <string name="facebook_settings_rsvp_range_attending">Attending</string>
    <string name="facebook_settings_rsvp_range_interested">Interested</string>
    <string name="facebook_settings_rsvp_range_not_replied">Not replied</string>
    <string name="facebook_settings_rsvp_range_declined">Declined</string>
    <string name="facebook_settings_sync_range">Syncing range</string>
    <string name="facebook_settings_sync_range_description">Should all events, or only upcoming events be synced?</string>
    <string name="facebook_settings_sync_range_all">All events</string>
    <string name="facebook_settings_sync_range_upcoming">Upcoming events</string>

    <!-- Local calendar settings -->
    <string name="local_calendar_settings_reminders">Event reminders</string>
    <string name="local_calendar_settings_reminders_description">Setup reminders for Facebook events.</string>
    <string name="local_calendar_settings_reminder_time">Reminder time</string>
    <string name="local_calendar_settings_reminder_time_description">Setup when you wish to be notified of an event starting.</string>
    <string name="local_calendar_settings_calendar_colour">Calendar colour</string>
    <string name="local_calendar_settings_calendar_colour_description">Choose the colour of your Facebook
    events local calendar.</string>
    <string name="local_calendar_settings_calendar_colour_red">Red</string>
    <string name="local_calendar_settings_calendar_colour_green">Green</string>
    <string name="local_calendar_settings_calendar_colour_orange">Orange</string>
    <string name="local_calendar_settings_calendar_colour_purple">Purple</string>
    <string name="local_calendar_settings_calendar_colour_blue">Blue</string>

    <string name="local_calendar_settings_reminder_times">Set reminders</string>
    <string name="local_calendar_settings_reminder_time_05h">0.5 hour</string>
    <string name="local_calendar_settings_reminder_time_1h">1 hour</string>
    <string name="local_calendar_settings_reminder_time_2hrs">2 hours</string>
    <string name="local_calendar_settings_reminder_time_6hrs">6 hours</string>
    <string name="local_calendar_settings_reminder_time_12hrs">12 hours</string>
    <string name="local_calendar_settings_reminder_time_24hrs">24 hours</string>

    <!--Words-->
    <string name="word_yes">Yes</string>
    <string name="word_no">No</string>
    <string name="word_cancel">Cancel</string>
    <string name="word_app_info">App info</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- Notifications -->
    <string name="notification_syncing_done_title">Syncing done</string>
    <string name="notification_syncing_done_message_short">Just performed a sync</string>
    <string name="notification_syncing_done_message_long">Just performed a sync. Current sync interval: %s</string>

    <string name="notification_syncing_problem_title">Syncing problem</string>

    <string name="notification_facebook_problem_message_short">There was a problem syncing your calendar</string>
    <string name="notification_facebook_problem_message_long">We couldn\'t sync your Facebook events with
    your calendar. Please log in again.</string>

    <string name="notification_missing_permissions_message_short">There was a problem syncing your calendar
    because of missing permissions</string>
    <string name="notification_missing_permissions_message_long">We couldn\'t sync your Facebook events with
    your calendar, because some permissions aren\'t granted.</string>

    <string name="notification_network_problem_message_short">No network</string>
    <string name="notification_network_problem_message_long">You don\'t seem to have an active data connection.
    Please connect to the internet, so your Facebook events can be synced</string>

</resources>
